# cpp-eva

./: CMakeLists.txt  LICENSE  README.md
src/: environment.cpp  environment.h  eva.cpp  eva.h  eval_types.cpp  eval_types.h  expression_helpers.h  expressions.cpp  expressions.h  main.cpp  transformer.h
src/tests/: block_test.h  built_in_func_test.h  class_test.h  expression_helpers.h  for_loop_test.h  if_test.h  inc_dec_test.h  lambda_func_test.h  math_test.h  self_eval_test.h  switch_test.h  test_utils.h  tests.h  user_defined_func_test.h  variables-test.h  while_test.h
